<resources>
    <string name="app_name">DejavuApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="Settings_music">Music</string>
    <string name="Settings_inputTime">Input Time</string>
    <string name="Settings_displayDelay">Display Delay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="volume">volume</string>
    <string name="volumeon">volumeOn</string>
    <string name="settings">Settings</string>
    <string name="back_to_home">back to home</string>
    <string name="d_j_vu">Déjà Vu</string>
    <string name="usernameHint">Username</string>
    <string name="How_to_Play">After you enter your username, and press the “Start Game” button, the game begins, as the computer immediately starts to display integers all over the screen, and they would disappear after a short period of time (adjustable in the settings window), and then the user will be prompted to enter each number that was displayed in the correct order. If the user guesses every number correctly, the next round begins, and the process continues, if the user’s guess was incorrect, they are sent back to the main menu, where they can look at their high score in the leaderboards, or they can play again.</string>
    <string name="help_objective">Objective</string>
    <string name="help_obj_description">The objective of the game is to test the user’s ability to recall as many numbers in the correct order as possible.</string>
    <string name="help_htpTitle">How to Play</string>
    <string name="objDes">The objective of the game is to test the user’s ability to recall as many numbers in the correct order as possible.</string>
    <string name="leaderboards_Header">Leaderboards</string>
    <string name="leaderboard_placeholderText">1 - ######## \n2 - ######## \n3 - ######## \n4 - ######## \n5 - ######## \n6 - ######## \n7 - ######## \n8 - ######## \n9 - ######## \n10 - ######## \n11 - ######## \n12 - ######## \n13 - ######## \n14 - ######## \n15 - ########</string>
    <string name="leaderboard_Score">TextView</string>
    <string name="start_game">Start Game</string>
</resources>