<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HelpScreenFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpScreen">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/baskervville"
        android:text="@string/help_objective"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="345dp"
        android:layout_height="84dp"
        android:layout_marginTop="4dp"
        android:text="@string/help_obj_description"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baskervville"
        android:text="@string/help_htpTitle"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="376dp"
        android:layout_height="240dp"
        android:layout_marginBottom="232dp"
        android:text="@string/How_to_Play"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/help_backhome"
        android:layout_width="48dp"
        android:layout_height="54dp"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="367dp"

        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/back_to_home"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>