<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LeaderBoard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gold"
    tools:context=".Fragments.LeaderBoard">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baskervville"
        android:text="@string/leaderboards_Header"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lBoard"
            android:layout_width="398dp"
            android:layout_height="454dp"
            android:fontFamily="sans-serif"
            android:text="@string/leaderboard_placeholderText"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.0" />

    <ImageButton
            android:id="@+id/leaderboard_homebtn"
            android:layout_width="57dp"
            android:layout_height="63dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:alpha="0.70"
            android:contentDescription="@string/back_to_home"
            android:padding="0dp"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>